# futuresearch-python

./: .dockerignore  .env.example  .gitignore  AUTH_BYPASS_AUDIT.md  CITATION.cff  NETWORK_POLICY_AUDIT.md  README.md  SECRET_MGMT_AUDIT.md  SSRF_AUDIT_REPORT.md  gemini-extension.json  generate_openapi.sh  lefthook.yml  openapi-python-client.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/bump-sdk-version/: SKILL.md
.claude/skills/deploy-mcp/: SKILL.md
.claude/skills/run-mcp-local/: SKILL.md
.github/workflows/: ci.yaml  claude-code-review.yml  deploy-docs.yaml  deploy-mcp.yaml  docs-sync-check.yml  integration-tests.yml  pr-content-check.yaml  publish.yaml
docs/: active-learning-llm-oracle.mdx  add-column-web-lookup.md  add-column-web-lookup.mdx  api.md  case-studies.md  chaining-operations.mdx  classify-dataframe-rows-llm.md  classify-dataframe-rows-llm.mdx  claude-ai.md  claude-code.md  claude-cowork.md  deduplicate-training-data-ml.mdx  filter-dataframe-with-llm.md  filter-dataframe-with-llm.mdx  fuzzy-join-without-keys.mdx  getting-started.md  guides.md  installation.mdx  mcp-server.md  mcp-server.mdx  rank-by-external-metric.mdx  resolve-entities-python.md  resolve-entities-python.mdx  scale-deduplication-20k-rows.mdx  skills-vs-mcp.mdx
docs-site/: .gitignore  README.md  package.json  pnpm-lock.yaml
docs-site/public/files/: review_code_skill.md
docs-site/scripts/: check-links.py  fetch-openapi.py  validate-notebook-patterns.py
docs-site/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
docs-site/src/blog/: claude-review-skill.mdx  llm-provider-quirks.mdx
docs-site/src/components/: GuideTabs.tsx  InstallationTabs.tsx  MDXContent.tsx  NotebookActions.tsx  Sidebar.tsx
docs-site/src/styles/: notebook.css
docs-site/src/utils/: blog.ts  docs.ts  notebooks.ts
docs/case_studies/dedupe-crm-company-records/: content.mdx  notebook.ipynb
docs/case_studies/deep-research-bench-pareto-analysis/: content.mdx  notebook.ipynb
docs/case_studies/llm-powered-merging-at-scale/: content.mdx  notebook.ipynb
docs/case_studies/llm-powered-screening-at-scale/: content.mdx  notebook.ipynb
docs/case_studies/llm-web-research-agents-at-scale/: notebook.ipynb
docs/case_studies/match-clinical-trials-to-papers/: content.mdx  gold_labels_200.csv  notebook.ipynb  output.csv  papers_700.csv  trials_200.csv
docs/case_studies/match-software-vendors-to-requirements/: content.mdx  (+1 more)
docs/data/: hn_jobs_classify.csv  hn_jobs_screen.csv
docs/reference/: CLASSIFY.md  DEDUPE.md  FORECAST.md  MERGE.md  RANK.md  RESEARCH.md  SCREEN.md
everyrow-mcp/: README.md  manifest.json  pyproject.toml  pyrightconfig.json  server.json
everyrow-mcp/deploy/: .env.example  Dockerfile  docker-compose.local.yaml  docker-compose.multi.yaml  docker-compose.yaml
everyrow-mcp/docs/: stateless-http-scaling.md
everyrow-mcp/scripts/: everyrow-statusline.sh  everyrow-stop-guard.sh
everyrow-mcp/tests/: conftest.py  test_auth.py  test_hook_stop_guard.sh  test_http_integration.py  test_http_real.py  test_http_transport.py  test_integration.py  test_long_poll.py  test_manifest_sync.py  test_mcp_e2e.py  test_middleware.py  test_redis_utils.py  test_result_store.py  test_routes.py  test_security_hardening.py  test_server.py  test_sheets_tools.py  test_state_redis.py  test_stdio_content.py  test_tool_helpers.py  test_ua_detection.py  test_uploads.py  test_utils.py
futuresearch-mcp/: README.md  manifest.json  pyproject.toml  server.json
futuresearch-mcp/deploy/: .dockerignore  .env.example  Dockerfile  docker-compose.local.yaml  docker-compose.multi.yaml  docker-compose.yaml  nginx.conf
futuresearch-mcp/tests/: __init__.py  conftest.py  test_auth.py  test_http_integration.py  test_http_real.py  test_http_transport.py  test_integration.py  test_manifest_sync.py  test_mcp_e2e.py  test_middleware.py  test_redis_utils.py  test_result_store.py  test_routes.py  test_schema_roundtrip.py  test_security_hardening.py  test_server.py  test_state_redis.py  test_stdio_content.py  test_tool_helpers.py  test_ua_detection.py  test_uploads.py  test_utils.py
skills/everyrow-sdk/: SKILL.md
skills/futuresearch-python/: SKILL.md
src/everyrow/: __init__.py  api_utils.py  constants.py  ops.py  session.py  task.py
src/futuresearch/: __init__.py  agent_harness.py  api_utils.py  billing.py  built_in_lists.py  constants.py  errors.py  ops.py  result.py  session.py  task.py
stubs/everyrow/: README.md  pyproject.toml
stubs/everyrow-mcp/: README.md  pyproject.toml
stubs/everyrow-mcp/src/everyrow_mcp/: __init__.py
stubs/everyrow/src/everyrow/: __init__.py
tests/: test_ops.py  test_session.py  test_task.py  test_version.py
tests/integration/: conftest.py  manual_partial_failure.py  test_agent_map.py  test_classify.py  test_dedupe.py  test_forecast.py  test_merge.py  test_partial_failure.py  test_rank.py  test_single_agent.py
(+89 files in other folders)
