[project]
name = "everyrow-mcp"
version = "0.9.0"
description = "Renamed to futuresearch-mcp. This package is a compatibility shim."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["futuresearch-mcp>=0.9.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/everyrow_mcp"]

[project.scripts]
everyrow-mcp = "futuresearch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
